修改前端构建方式

--- a/lambo-frontend/lambo-ui/.gitignore
+++ b/lambo-frontend/lambo-ui/.gitignore
@@ -1,7 +1,23 @@
-npm-debug.log
-node_modules
-.project
-.vscode
-.history
+*.iml
+.idea
+.ipr
+.iws
+*.diff
+*.patch
+*.bak
 .DS_Store
-\.settings/
+node_modules/
+node_modules2/
+.project
+.settings
+npm-debug.log
+.*proj
+.svn/
+*.swp
+*.swo
+*.log
+examples/dist/
+dist/
+yarn-error.log
+test/unit/coverage
+.vscode
