--- a/lambo-frontend/lambo-ui/.eslintrc.json
+++ b/lambo-frontend/lambo-ui/.eslintrc.json
@@ -1,23 +1,23 @@
 {
-    "extends": "standard",
-    "installedESLint": true,
     "root": true,
     "parserOptions": {
+        "ecmaFeatures": {
+            "experimentalObjectRestSpread": true
+        },
         "ecmaVersion": 6,
         "sourceType": "module"
     },
     "env": {
         "browser": true,
-        "node": true
+        "es6": true
     },
-    "plugins": [ "html", "standard" ],
+    "extends": "eslint:recommended",
+    "plugins": ["vue"],
     "rules": {
         "indent": ["error", 4, { "SwitchCase": 1 }],
         "quotes": ["error", "single"],
         "semi": ["error", "always"],
-        "no-console": ["error"],
-        "no-empty": 2,
-        "no-eq-null": 2,
-        "no-new": 0
+        "vue/jsx-uses-vars": 2,
+        "no-console": ["error"]
     }
 }
